Fix some spacing

--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -2,14 +2,15 @@ footer#site-footer {
     display: block;
     position: relative;
 
-    padding-top: 60px;
+    padding-top: $container-padding * 4;
+    padding-bottom: $container-padding;
 
     @include tablet {
-        padding-top: 90px;
+        padding-top: $container-padding * 6;
         padding-bottom: 60px;
     }
     @include desktop {
-        padding-top: 120px;
+        padding-top: $container-padding * 12;
         padding-bottom: 60px;
     }
 
@@ -48,7 +49,7 @@ footer#site-footer div.footer {
     text-align: center;
 
     grid-gap: $container-padding;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
     grid-template-rows: auto 1fr 1fr;
 
     grid-template-areas:
